Resolved all TODOs, New method for making URL connections, All collections are concurrent